--- a/style.css
+++ b/style.css
@@ -9,11 +9,14 @@ h1 {
     color: #fff;
     padding: 10px 0;
 }
+
+/* Each item boxes will be a flexbox */
 .item-box {
     display: flex;;
     margin: 0px 0 20px 0;
 }
 
+/* Button design */
 button {
     width: 80px;
     height:50px;
@@ -24,11 +27,13 @@ button {
     box-shadow: 0 .8px .8px .8px;
 }
 
+/* The hover effect for buttons */
 button:hover {
     color: blue;
     font-weight: bold;
 }
 
+/* Button-box is a flexbox */
 .button-box {
     left: 100px;
     display:flex;
